Change images to fit better

--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
             <div class="col-12">
                 <h1 class="header">DEVYN CHEW</h1>
                 <h2>Aspiring Software Developer</h2>
-                <p class="intro">Hello, I'm Devyn. I'm a 22 y/o aspiring software developer in Singapore, currently studying Applied AI and Analytics in Singapore Polytechnic. I have a keen interest in front-end and back-end software development.</p>
+                <p class="intro">Hello, I'm Devyn. I'm a 22 y/o aspiring software developer in Singapore, currently studying Applied AI and Analytics in Singapore Polytechnic. I have a keen interest in front-end software development.</p>
             </div>
             <div class="col-12">
                 <h1 class="subheader">Projects</h1>
+            </div>
+        </div>
+        <div class="row-second">
+            <div class="column">
+                <img src="./Photos/lighthouse498x250.png" alt="deep learning website">
+            </div>
+            <div class="column">
+                <img src="./Photos/telegram-420x250.png" alt="telegram bot">
+            </div>
+            <div class="column">
+                <img src="./Photos/lms-new.png" alt="lms website">
             </div>
         </div>
     </main>
